adjusted some small issues with spacing and offset items

--- a/styles.css
+++ b/styles.css
@@ -345,8 +345,8 @@ input[type=submit]:hover {
         text-transform: uppercase;
         background-color: red;
         padding: 20px;
-        margin-left: 20px;
-        width: 400px;
+        margin-left: 170px;
+        width: 100px;
     }
 
     .questionsCallout h2 {
@@ -523,8 +523,8 @@ input[type=submit]:hover {
         text-transform: uppercase;
         background-color: red;
         padding: 20px;
-        margin-left: 20px;
-        width: 400px;
+        margin-left: 175px;
+        width: 100px;
     }
 
     .questionsCalloutAbout h2 {
@@ -561,7 +561,7 @@ input[type=submit]:hover {
     .questionsCalloutAttractions {
         position: absolute;
         flex-direction: column-reverse;
-        padding-top: 80px;
+        padding-top: 40px;
         padding-left: 150px;
         text-align: center;
     }
@@ -850,6 +850,8 @@ input[type=submit]:hover {
     .topnav #myLinks {
         display: none;
         background-color: rgb(48, 48, 48);
+        margin-left: -170px;
+        margin-right: -90px;
     }
   
     /* Style navigation menu links */
@@ -893,7 +895,7 @@ input[type=submit]:hover {
         width: 25px;
     }
 
-    /* --- Tablet packages section --- */
+    /* --- Tablet attractions section --- */
     .flexAttractions {
         display: flex;
         justify-content: space-evenly;
@@ -916,6 +918,19 @@ input[type=submit]:hover {
     .attraction1 img, .attraction2 img, .attraction3 img {
         width: 275px;
         height: 200px;
+    }
+
+    .attractionsList section h2, .attractionsList section p {
+        text-align: left;
+    }
+
+    .questionsCalloutAttractions {
+        padding-top: 0px;
+        margin-left: 40px;
+    }
+
+    .questionsCalloutAttractions h2 {
+        margin-top: -40px;
     }
 
     /* --- flex plan trip and about sections --- */
@@ -1187,7 +1202,7 @@ input[type=submit]:hover {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
         width: 300px;
-        padding-left: 90px;
+        padding-left: 0px;
         margin-top: -20px;
     }
 
@@ -1217,6 +1232,11 @@ input[type=submit]:hover {
 
     .questionsCalloutAbout {
         margin-left: 220px;
+    }
+
+    .questionsCalloutAbout a {
+        margin-left: 170px;
+        width: 100px;
     }
 
     /* --- Attractions Page - Tablet --- */
@@ -1688,14 +1708,14 @@ input[type=submit]:hover {
     .attractionsList {
         display: flex;
         flex-direction: column;
-        padding: 20px;
+        padding: 20px 20px 60px 20px;
     }
 
     .attractionsList section {
         display: grid;
         grid-template-columns: 310px 1fr;
         grid-template-rows: 75px;
-        padding-left: 250px;
+        padding-left: 215px;
         padding-right: 250px;
         padding-bottom: 20px;
         padding-top: 60px;
@@ -1720,7 +1740,7 @@ input[type=submit]:hover {
     .questionsCalloutAttractions {
         position: absolute;
         margin-top: 100px;
-        padding-left: 560px;
+        padding-left: 515px;
         text-align: center;
     }
 
@@ -1737,6 +1757,14 @@ input[type=submit]:hover {
         margin-top: 40px;
     }
 
+    .attractionNo1 p, .attractionNo2 p, .attractionNo3 p {
+        text-align: left;
+    }
+
+    .attractionNo1 h2, .attractionNo2 h2, .attractionNo3 h2 {
+        text-align: left;
+    }
+
     /* --- Plan Trip Page - Desktop --- */
     .packages {
         padding-bottom: 60px;
@@ -1746,6 +1774,10 @@ input[type=submit]:hover {
         background-image: url(images/rollercoaster2-1280.jpg);
         background-position: bottom;
         background-size: cover;
+    }
+
+    .attractionsList section p {
+        width: 550px;
     }
 
     .tabletFormat {
